# Author: Rohin Galhotra, Stephanie Marcellin, Tam Tran
# NetID: rgalhotra, samarcellin, ttran23
# Date: November 2017
# Assignment 3 : hlsyn

cmake_minimum_required(VERSION 3.1)

# Define the project name. 

project (hlsyn)

# Add a subdirectory to the project. The CMakeLists.txt file in that subdirectory
# will be used for further setting up the project.

add_subdirectory( src )
